# CodeTest

./: .gitignore  helloworld2.cpp  helloworld2.h  makefile  test.c  test.cpp  test.java  test.rs  trial  trial.mk
Multi-thread_Testing/: test.cpp
Rust_Tutorial/: Cargo.toml
Rust_Tutorial/tutorial1/: Cargo and Intro to Rust notes.md  Variables Constants and Shadowing.md
Rust_Tutorial/tutorial10_ownership/: Cargo.toml  Ownership.md
Rust_Tutorial/tutorial11_Structs/: Cargo.toml  Structs.md
Rust_Tutorial/tutorial12_Enum_pattern_match/: Cargo.toml  Enum_Pattern_Matching.md
Rust_Tutorial/tutorial13_Modules/: Cargo.toml  Modules_Crates_Privacy.md
Rust_Tutorial/tutorial14_vector_string_hashmap/: Cargo.toml  Vectors_Strings_Hashmap.md
Rust_Tutorial/tutorial15_Error/: Cargo.toml  Error_Handling.md
Rust_Tutorial/tutorial16_GenericTypes/: Cargo.toml  GenericTypes.md
Rust_Tutorial/tutorial17_Traits/: Cargo.toml  Traits.md
Rust_Tutorial/tutorial18_Lifetimes/: Cargo.toml  Lifetimes.md
Rust_Tutorial/tutorial19_Closures/: Cargo.toml  Closures.md
Rust_Tutorial/tutorial20_Iterators/: Cargo.toml  Iterators.md
Rust_Tutorial/tutorial21_Cargo/: Cargo.toml  Cargo_Workspaces.md  Publishing_Crates.md
Rust_Tutorial/tutorial22_Box_Pointers/: Box_Smart_Pointers.md  Cargo.toml
Rust_Tutorial/tutorial23_Deref_Trait/: Cargo.toml  Deref_Trait.md
Rust_Tutorial/tutorial24_Drop_Trait/: Cargo.toml  Drop_Trait.md
Rust_Tutorial/tutorial25_Reference_Counting/: Cargo.toml  Reference_Counting.md
Rust_Tutorial/tutorial26_Interior_Mutability/: Cargo.toml  Interior_Mutability.md
(+58 files in other folders)
